# vhdl-experiments

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  vhdl_ls.toml
.github/workflows/: test.yml
ex1/: BUILD.bazel  package.vhdl  test.vhdl
ex2/: BUILD.bazel  ex2.vhdl  ex2_body.vhdl
ex3/: BUILD.bazel  ex3.vhdl
ex4/: BUILD.bazel  ex4.vhdl
ex4/lib1/: BUILD.bazel  lib1.vhdl
twoproc/: BUILD.bazel  lib.vhdl
